# career-command-center-backend

./: .env.example  .gitignore  ARCHITECTURE.md  DIAGRAMS.md  README.md  SUBMISSION.md  USERFLOW_DIAGRAM.md  career_command_center_FINAL_SPEC(1).md  crewai_optimization_guide.md  main.py  pyproject.toml  render.yaml  requirements.txt  supabase_force_upgrade.sql  supabase_setup.sql  supabase_upgrade.sql
src/career_command_center/: api.py  crew.py  main.py
src/career_command_center/config/: agents.yaml  tasks.yaml
